--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-tailwindcss": "^0.2.2",
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.9.3",
-		"vite": "^4.1.0"
+		"vite": "^4.1.0",
+		"vite-plugin-favicons-inject": "^2.2.0"
 	}
 }
