--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"@tanstack/react-router": "0.0.1-beta.82",
+		"classnames": "^2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
