--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
-		"wouter": "^2.10.0"
+		"wouter": "^2.10.0",
+		"zustand": "^4.3.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
