--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"classname": "^0.0.0",
 		"classnames": "^2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
